modal windows to trip planner

--- a/preferences-menu.html
+++ b/preferences-menu.html
@@ -4,7 +4,7 @@
 <br /><div style="font-size: medium;">manage stored addresses:</div>
 <ul>
 <li><a href="javascript:switchpage('add');">add</a></li>
-<li><a href="modifyaddress.html">modify</a></li>
+<li><a href="javascript:alert('moo');">modify</a></li>
 <li><a href="deleteaddress.html">delete </a></li>
 <li><a href="javascript:ShowHide('MOO')">reorder</a></li>
 </ul>
