--- a/preferences-add.html
+++ b/preferences-add.html
@@ -1,12 +1,12 @@
 <div id="add" style="DISPLAY: none; z-index: 2;">
-<div style="background: #FF9D00; margin: 0 0 0 0; padding: 0px 0px 0px 0px; font-size: 16px; border-bottom: 15px solid #FF2A13; color: #000000;font-size: 18px;"><img src="logo.png" height="57" width="57" style="margin-bottom: -20px; padding-bottom: 0px;border-bottom:0px;"/>metro mobile: add address</div>
+<div style="background: #FF9D00; margin: 0 0 0 0; padding: 0px 0px 0px 0px; font-size: 16px; border-bottom: 15px solid #FF2A13; color: #000000;font-size: 18px;"><img src="logo.png" height="57" width="57" style="margin-bottom: -20px; padding-bottom: 0px;border-bottom:0px;"/>metro mobile: add location</div>
 <div style="margin: 0 10px 0 8px;">
 <form name="add">
-description:<br />
-<input name="description" size="25" maxlength="80" /><br />
-address:<br />
-<input name="address" size="25" maxlength="80" /><br /><br />
-<input type="button" value="add address" onclick="addaddress();" />
+name:<br />
+<input name="locname" size="25" maxlength="80" /><br />
+location:<br />
+<input name="locloc" size="25" maxlength="80" /><br /><br />
+<input type="button" value="add address" onclick="addloc();" />
 </form>
 <div id="addnotsaved" style="float: right;"><a href="javascript:;" onclick="switchpage('menu');">preferences</a></div>
 <div id="addchangesaved" style="DISPLAY: none"><div style="float: left;">trip defaults saved</div><div style="float: right;"><a href="javascript:;" onclick="switchpage('menu');">preferences</a></div></div>
@@ -15,6 +15,10 @@ address:<br />
 <div style="font-size: x-small;">copyright 2010 nicholas barnard</div>
 </div>
 </div>
+<div id="addsuccess" class="modalpage" style="display: none;"><div class="modalpopup">
+address added<br /><br /><input type="button" value="add another location" class="modalokay" onClick="document.add.locloc.value='';document.add.locname.value='';ShowHide('addsuccess');"><br /> <br /> 
+<input type="button" value="back to preferences" class="modalokay" onClick="document.add.locloc.value='';document.add.locname.value='';ShowHide('addsuccess');switchpage('menu');"> 
+</div></div>
 
 
 
