add dialogues prettied

--- a/preferences-add.html
+++ b/preferences-add.html
@@ -20,5 +20,17 @@ address added<br /><br /><input type="button" value="add another location" class
 <input type="button" value="back to preferences" class="modalokay" onClick="document.add.locloc.value='';document.add.locname.value='';ShowHide('addsuccess');switchpage('menu');"> 
 </div></div>
 
+<div id="blankloc" class="modalpage" style="display: none;"><div class="modalpopup">
+please enter a location
+<br /><br /><input type="button" value="okay" class="modalokay" onClick="ShowHide('blankloc');" />
+</div></div>
 
+<div id="blankname" class="modalpage" style="display: none;"><div class="modalpopup">
+please enter a name
+<br /><br /><input type="button" value="okay" class="modalokay" onClick="ShowHide('blankname');" />
+</div></div>
 
+<div id="blanknameloc" class="modalpage" style="display: none;"><div class="modalpopup">
+please enter a name and location
+<br /><br /><input type="button" value="okay" class="modalokay" onClick="ShowHide('blanknameloc');" />
+</div></div>
