--- a/preferences-menu.html
+++ b/preferences-menu.html
@@ -5,12 +5,12 @@
 <ul>
 <li><a href="javascript:switchpage('add');">add</a></li>
 <li><a href="javascript:alert('moo');">modify</a></li>
-<li><a href="deleteaddress.html">delete </a></li>
+<li><a href="javascript:loaddelete();switchpage('delete');">delete</a></li>
 <li><a href="javascript:ShowHide('MOO')">reorder</a></li>
 </ul>
 <br /><div style="font-size: medium;">other options:</div>
 <ul>
-<li><a href="javascript:;" onclick="switchpage('tripdefaults');">trip defaults</a></li>
+<li><a href="javascript:switchpage('tripdefaults');">trip defaults</a></li>
 </ul>
 <br /><br /><br /><br />
 <hr />
