--- a/preferences-menu.html
+++ b/preferences-menu.html
@@ -5,7 +5,7 @@
 <ul>
 <li><a href="javascript:switchpage('add');">add</a></li>
 <li><a href="javascript:alert('moo');">modify</a></li>
-<li><a href="javascript:loaddelete();switchpage('delete');">delete</a></li>
+<li><a href="javascript:loaddelete();">delete</a></li>
 <li><a href="javascript:ShowHide('MOO')">reorder</a></li>
 </ul>
 <br /><div style="font-size: medium;">other options:</div>
