added footer to delete preferences, cleaned up add footer, fixed bug in previous version

--- a/preferences-delete.html
+++ b/preferences-delete.html
@@ -8,9 +8,14 @@ location to delete:<br />
 <br />
 <br />
 <input type="button" value="delete location" onClick="deleteverify();">
-
 </form>
-</div></div>
+<div style="float: right;"><a href="javascript:;" onclick="switchpage('menu');">preferences</a></div>
+<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><hr />
+
+<div style="font-size: x-small;">copyright 2010 nicholas barnard</div>
+
+</div>
+</div>
 
 
 <div id="deleteverify" class="modalpage" style="display: none;"><div class="modalpopup">
