--- a/preferences.html
+++ b/preferences.html
@@ -60,7 +60,7 @@ function addloc() {
 var nextentry;
 
 if((document.add.locloc.value == "")&&(document.add.locname.value == "")){
-loadgenericmodal('please enter a name and location')'
+loadgenericmodal('please enter a name and location');
 return false;
 }
 
