--- a/preferences-add.html
+++ b/preferences-add.html
@@ -8,8 +8,7 @@ location:<br />
 <input name="locloc" size="25" maxlength="80" /><br /><br />
 <input type="button" value="add location" onclick="addloc();" />
 </form>
-<div id="addnotsaved" style="float: right;"><a href="javascript:;" onclick="switchpage('menu');">preferences</a></div>
-<div id="addchangesaved" style="DISPLAY: none"><div style="float: left;">trip defaults saved</div><div style="float: right;"><a href="javascript:;" onclick="switchpage('menu');">preferences</a></div></div>
+<div style="float: right;"><a href="javascript:;" onclick="switchpage('menu');">preferences</a></div>
 <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><hr />
 
 <div style="font-size: x-small;">copyright 2010 nicholas barnard</div>
