fixed prefpane forms to adust for use of the 'go' button

--- a/preferences-tripdefaults.html
+++ b/preferences-tripdefaults.html
@@ -1,7 +1,7 @@
 <div id="tripdefaults" style="DISPLAY: none;z-index: 2;">
 <div style="background: #FF9D00; margin: 0 0 0 0; padding: 0px 0px 0px 0px; font-size: 16px; border-bottom: 15px solid #FF2A13; color: #000000;font-size: 18px;"><img src="logo.png" height="57" width="57" style="margin-bottom: -20px; padding-bottom: 0px;border-bottom:0px;"/>metro mobile: trip defaults</div>
 <div style="margin: 0 10px 0 8px;">
-<form name="prefs">
+<form name="prefs" action="javascript:saveprefs();">
 time:<br />
 <select name="Arr" size="1" onchange="hidesave();">
 <option value="A" selected="selected">arrive</option>
