--- a/preferences.html
+++ b/preferences.html
@@ -56,6 +56,13 @@ function readCookie(name) {
   return null;
 }
 
+function loadmodifyloc() {
+document.modifylocform.locname.value = locname[document.modifyform.list.selectedIndex];
+document.modifylocform.locloc.value = locloc[document.modifyform.list.selectedIndex];
+
+switchpage('modifyloc');
+}
+
 function addloc() {
 var nextentry;
 
@@ -75,7 +82,7 @@ return false;
 }
 
 if((document.add.locname.value.indexOf('`') !== -1) || (document.add.locloc.value.indexOf('`') !== -1)){
-alert('error!');
+loadgenericmodal('sorry but the location and name cannot contain the ` character');
 return false;
 }
 
@@ -147,6 +154,11 @@ document.title = "metro mobile: add location";
 break;
 case 'delete':
 document.title = "metro mobile: delete location";
+break;
+case 'modify':
+case 'modifyloc':
+document.title = "metro mobile: modify location";
+break;
 }
   setTimeout("window.scroll(0,1)",5);
 }
@@ -158,6 +170,29 @@ function ShowHide(divId) {
   else {
     document.getElementById(divId).style.display = 'none';
   }
+}
+
+function loadmodify() {
+var len;
+var i;
+
+// make sure we have the newest cookie
+if(!(getCookieArrays())){
+loadgenericmodal('there are no locations to modify');
+return false;
+}
+
+len=locname.length;
+
+document.modifyform.list.options.length=0;
+
+
+for(i=0;i<len;i++){
+document.modifyform.list.options[i]=new Option(locname[i]);
+}
+
+switchpage('modify');
+
 }
 
 function loaddelete() {
@@ -225,6 +260,7 @@ ShowHide('genericmodal');
 <!--#include virtual="preferences-menu.html" -->
 <!--#include virtual="preferences-add.html" -->
 <!--#include virtual="preferences-delete.html" -->
+<!--#include virtual="preferences-modify.html" -->
 <!--#include virtual="preferences-tripdefaults.html" -->
 <!--#include virtual="preferences-cookiecheck.html" -->
 <div id="genericmodal" class="modalpage" style="display: none;"><div class="modalpopup">
