--- a/preferences-menu.html
+++ b/preferences-menu.html
@@ -12,9 +12,9 @@
 <ul>
 <li><a href="javascript:switchpage('tripdefaults');">trip defaults</a></li>
 </ul>
-<br /><br /><br /><br />
-<hr />
-<div style="font-size: x-small;">copyright 2010 nicholas barnard</div>
+<br />
+<div style="float: right;"><a href="index.html">main</a></div><br /><hr />
+<div style="font-size: x-small;">copyright 2010 nicholas barnard</div><br /><br/>
 </div>
 </div>
 
