--- a/preferences.html
+++ b/preferences.html
@@ -172,6 +172,10 @@ function ShowHide(divId) {
   }
 }
 
+function modifyloc() {
+ShowHide('modifysuccess');
+}
+
 function loadmodify() {
 var len;
 var i;
