Confirmation name added to modify and add modals

--- a/preferences-add.html
+++ b/preferences-add.html
@@ -15,6 +15,6 @@ location:<br />
 </div>
 </div>
 <div id="addsuccess" class="modalpage" style="display: none;"><div class="modalpopup">
-location added<br /><br /><input type="button" value="add another location" class="modalokay" onClick="document.add.locloc.value='';document.add.locname.value='';ShowHide('addsuccess');"><br /> <br /> 
+location &quot;<span id="addsuccessitem"></span>&quot; added<br /><br /><input type="button" value="add another location" class="modalokay" onClick="document.add.locloc.value='';document.add.locname.value='';ShowHide('addsuccess');"><br /> <br /> 
 <input type="button" value="back to preferences" class="modalokay" onClick="document.add.locloc.value='';document.add.locname.value='';ShowHide('addsuccess');switchpage('menu');"> 
 </div></div>
