--- a/preferences-modify.html
+++ b/preferences-modify.html
@@ -33,6 +33,6 @@ location:<br />
 </div>
 </div>
 <div id="modifysuccess" class="modalpage" style="display: none;"><div class="modalpopup">
-location modified<br /><br /><input type="button" value="modify another location" class="modalokay" onClick="ShowHide('modifysuccess');loadmodify();" style="width: 200px;height: 50px;white-space: normal;"><br /> <br /> 
+location &quot;<span id="modifysuccessitem"></span>&quot; modified<br /><br /><input type="button" value="modify another location" class="modalokay" onClick="ShowHide('modifysuccess');loadmodify();" style="width: 200px;height: 50px;white-space: normal;"><br /> <br /> 
 <input type="button" value="back to preferences" class="modalokay" onClick="ShowHide('modifysuccess');switchpage('menu');"> 
 </div>
