added stock locations

--- a/tripplanner.html
+++ b/tripplanner.html
@@ -253,7 +253,8 @@ var len;
 var i;
 
 if(!getCookieArrays()){
-alert('load generic locations');
+locloc=["Pike Place Market", "Seattle Center South", "blank", "Westlake Tunnel Station", "700 Broadway E", "SeaTac Airport", "Bellevue Transit Center", "University of Washington", "E Pine St & Broadway"];
+locname=["Pike Place Market", "Seattle Center", "Touch Preferences to Customize This List", "Westlake Tunnel Station", "Roy Street Coffee & Tea", "Seattle-Tacoma International Airport", "Bellevue Transit Center", "University of Washington", "Seattle Central Community College"];
 } 
 
 len=locname.length;
