first pass at integrating geo.js

--- a/tripplanner.html
+++ b/tripplanner.html
@@ -267,6 +267,8 @@ document.write('<option value="' + locloc[i] +'">' + locname[i] + '</option>');
 
 }
 
+<!--#include virtual="geo.js" -->
+
 </script>
 <link href="tripplanner.css" rel="stylesheet" type="text/css" />
 <link rel="apple-touch-icon" href="logo.png" />
